# 3dgs-vulkan-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
vulkan-3dgs/: CMakeLists.txt  vulkan-3dgs.vcxproj  vulkan-3dgs.vcxproj.filters
vulkan-3dgs/headers/: Application.h  BufferManager.h  Camera.h  ComputePipeline.h  GPUMemInfo.h  GaussianBase.h  GaussianRenderer.h  GraphicsPipeline.h  Imgui3DGS.cpp  Imgui3DGS.h  PLYLoader.h  RenderSettings.h  Sequence.h  VulkanContext.h  Window.h  entrypoint_python.h  utils.h
vulkan-3dgs/src/: bindings.cpp  entrypoint_python.cpp  main.cpp
vulkan-3dgs/src/Application/: Application.cpp
vulkan-3dgs/src/Core/: GaussianBase.cpp
vulkan-3dgs/src/Drivers/: ComputePipeline.cpp  VulkanContext.cpp  Window.cpp
vulkan-3dgs/src/Rendering/: BufferManager.cpp  Camera.cpp  GaussianRenderer.cpp
vulkan-3dgs/src/Sequences/: Sequence.cpp
vulkan-3dgs/src/Shaders/: boundaries.spv  comp.spv  compile.bat  compile_shaders.sh  debug.comp  debugGaussians.comp  histogram.spv  idkeys.comp  idkeys.spv  nearest.spv  prefixsum.comp  preprocess.comp  preprocess.spv  render.comp  render.spv  render_shared.spv  render_shared_mem.comp  sort.spv  sum.spv  tile_boundaries.comp  upsample.comp  vertex_axis.vert
vulkan-3dgs/src/UI/: Imgui.cpp  Imgui3DGS.cpp  graphicsPipeline.cpp
vulkan-3dgs/src/Utils/: PLYLoader.cpp  RenderSettings.cpp
vulkan-3dgs/src/scripts/: compile.bat  compile_shaders.sh  compile_shaders_lx.sh
